pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-app-root-and-default-backend.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-app-root-and-default-backend
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/app-root: /foo

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  rules:
    - host: app-root.localhost
      http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
